# k-sec-dbvf

./: .gitignore  CITATION.cff  CLAUDE.md  IMPROVEMENT-PLAN.md  JMST-COVER-LETTER.md  JMST-DRAFT.md  JMST-SI.md  JMST-SUBMISSION-CHECKLIST.md  LICENSE  PIVOT-START.md  README.md  RESULTS-kSEC.md  ROADMAP.md  pyproject.toml  requirements.txt
applications/: build_anonymous_manuscript.py  build_chemrxiv_pdf.py  build_coi_declaration.py  build_cover_pdf.py  build_jmst_submission.py  build_tech_reference.py  build_tech_reference_figs.py  build_title_page.py  fill_doci_template.py  fix_figure_refs.py  force_black_text.py  pluralize_to_singular.py  renumber_citations.py  scan_pdf_errors.py
configs/: base.yaml
results/: ablation.json  dbvf_learned_params.json  ksec.json  ksec_arrhenius.json  ksec_final.json  ksec_for_ckpt.json  ksec_hybrid.json  ksec_hybrid_lattice.json  ksec_hybrid_pretrained.json  ksec_mega.json  ksec_phaseA.json  ksec_phaseA2.json  ksec_phaseA4.json  ksec_phaseB1.json  ksec_phaseB1_oof.npz  ksec_phaseB1_seed0.pt  ksec_phaseB1_seed1.pt  ksec_phaseB1_seed2.pt  ksec_phaseB1_seed3.pt  ksec_phaseB1_seed4.pt  ksec_phaseB2.json  ksec_phaseB3.json  ksec_v2.json  kubic_interpret.json  learning_curve_ksec_f0.4.json  learning_curve_ksec_f0.6.json  learning_curve_ksec_f0.8.json  learning_curve_lgbm_f0.4.json  learning_curve_lgbm_f0.6.json  learning_curve_lgbm_f0.8.json  learning_curve_lgbm_f1.0.json  learning_curve_log.txt  learning_curve_summary.json  lightgbm_with_dbvf.json  lightgbm_with_mace.json  magpie_pretrained.pt  matbench_matbench_log_gvrh.json  (+14 more)
(+53 files in other folders)
