[project]
name = "ionpath"
version = "0.1.0"
description = "Dual-graph equivariant neural network with multi-fidelity Arrhenius-consistent training for solid-state electrolyte ionic conductivity prediction."
requires-python = ">=3.10"

dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "scikit-learn>=1.4",
    "scipy>=1.11",
    "torch>=2.2",
    "pyyaml>=6.0",
    "tqdm>=4.66",
    "requests>=2.31",
]

[project.optional-dependencies]
materials = [
    "pymatgen>=2024.1",
    "matminer>=0.9",
    "mp-api>=0.41",
]
graph = [
    "torch-geometric>=2.5",
]
boost = [
    "xgboost>=2.0",
]
viz = [
    "matplotlib>=3.8",
    "seaborn>=0.13",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.3",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "UP"]
ignore = ["E501"]
